set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

if (LEGACY_BUILD_MODE)
    find_package(Arnold)
    find_package(Maya)
    find_package(Houdini)
else ()
    find_package(Partio)
    include_directories(${PARTIO_INCLUDE_DIR})
    link_directories(${PARTIO_LIBRARY_DIR})
    if (BUILD_PARTIO_MTOA OR BUILD_PARTIO_ARNOLD)
        find_package(Arnold)
    endif ()
    if (BUILD_PARTIO_MAYA OR BUILD_PARTIO_MTOA)
        find_package(Maya)
    endif ()
    if (BUILD_PARTIO_HOUDINI)
        find_package(Houdini)
    endif ()
endif ()

if (MAYA_FOUND AND BUILD_PARTIO_MAYA)
    add_subdirectory(partio4Maya)
endif ()

if (NOT WIN32 AND NOT APPLE)
    if (ARNOLD_FOUND)
        add_subdirectory(partio4Arnold)
    endif ()
    if (HOUDINI_FOUND)
        add_subdirectory(partio4Houdini)
    endif ()
endif ()
